--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.3.2",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
