--- a/backend/spider/config.json
+++ b/backend/spider/config.json
@@ -1,10 +1,12 @@
 {
-    "user_id_list": ["5578381471"],
+    "user_id_list": [
+        "2609400635"
+    ],
     "only_crawl_original": 1,
-    "since_date": 90,
+    "since_date": 16,
     "start_page": 1,
     "write_mode": [
-        "csv"
+        "mongo"
     ],
     "original_pic_download": 0,
     "retweet_pic_download": 0,
@@ -16,7 +18,7 @@
     "repost_max_download_count": 100,
     "user_id_as_folder_name": 0,
     "remove_html_tag": 1,
-    "cookie": "",
+    "cookie": null,
     "mysql_config": {
         "host": "localhost",
         "port": 3306,
@@ -24,5 +26,5 @@
         "password": "123456",
         "charset": "utf8mb4"
     },
-    "mongodb_URI": "host=127.0.0.1:27017"
+    "mongodb_URI": "host=127.0.0.1:27017['test']"
 }
