--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/qs": "^6.9.7",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
